--- a/config/database.yml
+++ b/config/database.yml
@@ -8,6 +8,7 @@
 
 development:
   adapter: postgresql
+  host: localhost
   database: my_database_development
   pool: 5
   timeout: 5000
@@ -17,12 +18,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: my_database_development
+  database: my_database_test
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
-  database: my_database_development
+  database: my_database_production
   pool: 5
   timeout: 5000
